base/utilities/openspeedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: utilities
  labels:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/part-of: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openspeedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openspeedtest
        app.kubernetes.io/part-of: homelab
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest:latest@sha256:1745e913f596fe98882b286a67751efdae74774e9caa742a4934bb056e8748d2
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
