base/utilities/openspeedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: utilities
  labels:
    app.kubernetes.io/name: openspeedtest
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openspeedtest
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
